--- a/docs/keras-imdb.ipynb
+++ b/docs/keras-imdb.ipynb
@@ -24,12 +24,29 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Prerequisites\n",
+        "\n",
+        "To start this tutorial, you need the following setup:\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Install [TensorFlow](https://kirenz.github.io/codelabs/codelabs/tfx-install/#0) (we use TensorFlow Extended to install TensorfFlow)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Setup"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -56,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -77,9 +94,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Dataset with 50,000 polar movie reviews (positive or negative)\n",
-        "- Training data and test data each 25,000 \n",
-        "- Training and testing sets are balanced (contain an equal number of positive and negative reviews)\n",
+        "- We use the IMDB dataset with 50,000 polar movie reviews (positive or negative)\n",
+        "- Training data and test data: each 25,000 \n",
+        "- Training and testing sets are balanced (they contain an equal number of positive and negative reviews)\n",
         "- The input data consists of sentences (strings)\n",
         "- The labels to predict are either 0 or 1."
       ]
@@ -95,26 +112,25 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Import data as batches with size 32\n",
         "- We use 3 data splits: training, validation and test data\n",
         "- Split the data into 60% training and 40% test\n",
         "- Split training into 60% training and 40% validation\n",
         "- Resulting data split:\n",
-        "  - 15,000 examples for training, \n",
+        "  - 15,000 examples for training\n",
         "  - 10,000 examples for validation\n",
-        "  - 25,000 examples for testing."
+        "  - 25,000 examples for testing"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2022-04-07 22:14:42.938666: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "2022-04-08 08:39:47.248656: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
           ]
         }
@@ -127,22 +143,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#import tensorflow as tf\n",
-        "#import tensorflow_datasets as tfds\n",
-        "\n",
-        "#train_ds = tfds.load('imdb_reviews', split='train', as_supervised=True).batch(32)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Explore data"
+        "### Explore data"
       ]
     },
     {
@@ -180,7 +184,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2022-04-07 22:14:43.803622: W tensorflow/core/kernels/data/cache_dataset_ops.cc:768] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
+            "2022-04-08 08:41:40.355812: W tensorflow/core/kernels/data/cache_dataset_ops.cc:768] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
           ]
         }
       ],
@@ -196,29 +200,29 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Data preprocessing"
+        "### Data preprocessing"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- How to represent the text?"
+        "- First, we need to decide how to represent the text data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Option 1: One-hot encoding \n",
-        "  - Example: a color feature gets a 1 in a specific index for different colors ('red' = [0, 0, 1, 0, 0])"
+        "Option 1: **One-hot encoding**\n",
+        "- Example: a color feature gets a 1 in a specific index for different colors ('red' = [0, 0, 1, 0, 0])"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        " - Option 2: embed the feature \n",
+        "Option 2: **Embed the feature** \n",
         "   - Example: each color maps to a unique trainable vector ('red' = [0.1, 0.2, 0.5, -0.2]"
       ]
     },
