--- a/docs/keras-imdb.ipynb
+++ b/docs/keras-imdb.ipynb
@@ -214,31 +214,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Option 1: **One-hot encoding**\n",
-        "- Example: a color feature gets a 1 in a specific index for different colors ('red' = [0, 0, 1, 0, 0])"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Option 2: **Embed the feature** \n",
-        "   - Example: each color maps to a unique trainable vector ('red' = [0.1, 0.2, 0.5, -0.2]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- Larger category spaces: might do better with an embedding\n",
-        "- Smaller spaces: one-hot encoding"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### TextVectorization"
+        "#### TextVectorization"
       ]
     },
     {
@@ -246,7 +222,7 @@
       "metadata": {},
       "source": [
         "- We will be working with raw text (natural language inputs)\n",
-        "- so we will use the [`TextVectorization`](https://www.tensorflow.org/api_docs/python/tf/keras/layers/TextVectorization) layer.\n",
+        "- So we will use the [`TextVectorization`](https://www.tensorflow.org/api_docs/python/tf/keras/layers/TextVectorization) layer.\n",
         "- It transforms a batch of strings (one example = one string) into either a\n",
         "  - list of token indices (one example = 1D tensor of integer token indices) or \n",
         "  - dense representation (one example = 1D tensor of float values representing data about the example's tokens). "
@@ -295,6 +271,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- `Adapt` is a utility function on all stateful preprocessing layers, which allows layers to set their internal state from input data. \n",
+        "\n",
+        "- Calling adapt is always optional. \n",
+        "- For TextVectorization, we could instead supply a precomputed vocabulary on layer construction, and skip the adapt step."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {},
@@ -314,20 +300,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- `Adapt` is a utility function on all stateful preprocessing layers, which allows layers to set their internal state from input data. \n",
-        "\n",
-        "- Calling adapt is always optional. \n",
-        "- For TextVectorization, we could instead supply a precomputed vocabulary on layer construction, and skip the adapt step."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- We will define two functions: \n",
-        "\n",
-        "1. `preprocess`, which converts raw input data to the representation we want for our model, and \n",
-        "1. `forward_pass`, which applies the trainable layers."
+        "- Next, we define a preprocessing function\n",
+        "- This is especially useful if you combine multiple preprocessing steps\n",
+        "- Here, we only use one step: `preprocess` converts raw input data to the representation we want for our model"
       ]
     },
     {
@@ -352,13 +327,6 @@
       "metadata": {},
       "source": [
         "### Architecture"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- We can now train a simple linear model on top of this multi-hot encoding. \n"
       ]
     },
     {
@@ -493,13 +461,50 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "- We can now train a simple model on top of this multi-hot encoding. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "First, we set up TensorBoard and an early stopping rule:\n",
+        "\n",
+        "1. Define the directory where TensorBoard stores log files (we create folders with timestamps by using [`datetime`](https://docs.python.org/3/library/datetime.html)) \n",
+        "1. We add `keras.callbacks.TensorBoard` callback which ensures that logs are created and stored.\n",
+        "1. To prevent overfitting, we use a callback wich will stop the training when there is no improvement in the validation accuracy for three consecutive epochs.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create TensorBoard folders\n",
+        "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+        "\n",
+        "# Create callbacks\n",
+        "my_callbacks = [\n",
+        "    keras.callbacks.TensorBoard(log_dir=log_dir),\n",
+        "    keras.callbacks.EarlyStopping(monitor='val_loss', patience=3),\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model training:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "- Train the model for 10 epochs in mini-batches of 512 samples\n",
-        "- This is 10 iterations over all samples in the x-train and y-train tensors \n",
-        "- We shuffle the data and use a buffer_size of 10000 to fill our batches\n",
-        "- While training, monitor the model's loss and accuracy on the 10,000 samples from the validation set.\n",
-        "- To prevent overfitting, we use a callback wich will stop the training when there is no improvement in the accuracy for three consecutive epochs.\n",
-        "- We add `keras.callbacks.TensorBoard` callback which ensures that logs are created and stored. \n",
-        "- Additionally, we enable histogram computation every epoch with histogram_freq=1 (this is off by default)"
+        "- We shuffle the data and use a `buffer_size` of 10000\n",
+        "- We monitor the model's loss and accuracy on the 10,000 samples from the validation set."
       ]
     },
     {
@@ -512,21 +517,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-        "epochs = 10\n",
-        "\n",
-        "my_callbacks = [\n",
-        "    keras.callbacks.EarlyStopping(monitor='val_loss', patience=3),\n",
-        "    keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=0),\n",
-        "]"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 14,
       "metadata": {},
       "outputs": [
@@ -535,29 +525,31 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "30/30 [==============================] - 5s 97ms/step - loss: 0.6469 - accuracy: 0.5387 - val_loss: 0.5978 - val_accuracy: 0.5761\n",
+            "30/30 [==============================] - 2s 43ms/step - loss: 0.6478 - accuracy: 0.5346 - val_loss: 0.6004 - val_accuracy: 0.5917\n",
             "Epoch 2/10\n",
-            "30/30 [==============================] - 2s 76ms/step - loss: 0.5642 - accuracy: 0.6319 - val_loss: 0.5370 - val_accuracy: 0.6747\n",
+            "30/30 [==============================] - 1s 34ms/step - loss: 0.5634 - accuracy: 0.6402 - val_loss: 0.5378 - val_accuracy: 0.6685\n",
             "Epoch 3/10\n",
-            "30/30 [==============================] - 2s 74ms/step - loss: 0.5100 - accuracy: 0.7163 - val_loss: 0.4962 - val_accuracy: 0.7166\n",
+            "30/30 [==============================] - 1s 33ms/step - loss: 0.5088 - accuracy: 0.7152 - val_loss: 0.4969 - val_accuracy: 0.7467\n",
             "Epoch 4/10\n",
-            "30/30 [==============================] - 2s 66ms/step - loss: 0.4715 - accuracy: 0.7601 - val_loss: 0.4657 - val_accuracy: 0.7639\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.4698 - accuracy: 0.7618 - val_loss: 0.4654 - val_accuracy: 0.7643\n",
             "Epoch 5/10\n",
-            "30/30 [==============================] - 2s 71ms/step - loss: 0.4421 - accuracy: 0.7901 - val_loss: 0.4429 - val_accuracy: 0.7912\n",
+            "30/30 [==============================] - 1s 33ms/step - loss: 0.4403 - accuracy: 0.7949 - val_loss: 0.4420 - val_accuracy: 0.7846\n",
             "Epoch 6/10\n",
-            "30/30 [==============================] - 2s 53ms/step - loss: 0.4186 - accuracy: 0.8107 - val_loss: 0.4252 - val_accuracy: 0.8110\n",
+            "30/30 [==============================] - 1s 32ms/step - loss: 0.4169 - accuracy: 0.8119 - val_loss: 0.4238 - val_accuracy: 0.8059\n",
             "Epoch 7/10\n",
-            "30/30 [==============================] - 2s 72ms/step - loss: 0.3994 - accuracy: 0.8257 - val_loss: 0.4096 - val_accuracy: 0.8131\n",
+            "30/30 [==============================] - 1s 32ms/step - loss: 0.3977 - accuracy: 0.8286 - val_loss: 0.4087 - val_accuracy: 0.8098\n",
             "Epoch 8/10\n",
-            "30/30 [==============================] - 2s 67ms/step - loss: 0.3834 - accuracy: 0.8351 - val_loss: 0.3975 - val_accuracy: 0.8263\n",
+            "30/30 [==============================] - 1s 32ms/step - loss: 0.3820 - accuracy: 0.8365 - val_loss: 0.3965 - val_accuracy: 0.8240\n",
             "Epoch 9/10\n",
-            "30/30 [==============================] - 2s 62ms/step - loss: 0.3699 - accuracy: 0.8433 - val_loss: 0.3874 - val_accuracy: 0.8347\n",
+            "30/30 [==============================] - 1s 32ms/step - loss: 0.3686 - accuracy: 0.8448 - val_loss: 0.3860 - val_accuracy: 0.8249\n",
             "Epoch 10/10\n",
-            "30/30 [==============================] - 2s 75ms/step - loss: 0.3580 - accuracy: 0.8511 - val_loss: 0.3782 - val_accuracy: 0.8367\n"
+            "30/30 [==============================] - 1s 33ms/step - loss: 0.3571 - accuracy: 0.8534 - val_loss: 0.3774 - val_accuracy: 0.8275\n"
           ]
         }
       ],
       "source": [
+        "epochs = 10\n",
+        "\n",
         "history = model.fit(\n",
         "    train_ds.shuffle(buffer_size=10000).batch(512),\n",
         "    epochs=epochs,\n",
@@ -623,9 +615,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "49/49 - 2s - loss: 0.3827 - accuracy: 0.8284 - 2s/epoch - 38ms/step\n",
+            "49/49 - 1s - loss: 0.3825 - accuracy: 0.8219 - 1s/epoch - 24ms/step\n",
             "loss: 0.383\n",
-            "accuracy: 0.828\n"
+            "accuracy: 0.822\n"
           ]
         }
       ],
