--- a/docs/keras-imdb.ipynb
+++ b/docs/keras-imdb.ipynb
@@ -14,10 +14,14 @@
       },
       "source": [
         "*This tutorial is based on [An Introduction to Keras Preprocessing Layers](https://blog.tensorflow.org/2021/11/an-introduction-to-keras-preprocessing.html) by Matthew Watson, [Text classification with TensorFlow Hub: Movie reviews](https://www.tensorflow.org/tutorials/keras/text_classification_with_hub) and [Basic text classification](https://www.tensorflow.org/tutorials/keras/text_classification) by TensorFlow.*\n",
-        " \n",
-        "- Goal: build a binary sentiment classification model with keras preprocessing\n",
-        "- We use TensorBoard to view model results\n",
-        "- Data: imdb movie review dataset. "
+        "\n",
+        "Main topics in this tutorial:\n",
+        "\n",
+        "- Build a binary sentiment classification model with keras \n",
+        "- Use keras layers for data preprocessing\n",
+        "- Use TensorBoard to view model results\n",
+        "- Save and reload the model\n",
+        "- Example for multiple feature engineering steps"
       ]
     },
     {
@@ -1015,7 +1019,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Feature engineering example"
+        "## Multiple feature engineering steps"
       ]
     },
     {
