--- a/docs/keras-imdb.ipynb
+++ b/docs/keras-imdb.ipynb
@@ -38,7 +38,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Install [TensorFlow](https://kirenz.github.io/codelabs/codelabs/tfx-install/#0) (we use TensorFlow Extended to obtain more deployment options)"
+        "- Install [TensorFlow](https://kirenz.github.io/codelabs/codelabs/tfx-install/#0) (Note that we install TensorFlow Extended to obtain more deployment options. However, we don't use the options in this tutorial)"
       ]
     },
     {
