--- a/_sources/docs/keras-tuner.ipynb
+++ b/_sources/docs/keras-tuner.ipynb
@@ -12,21 +12,25 @@
    "metadata": {},
    "source": [
     "*The following code is based on [\"Getting started with KerasTuner\n",
-    "\"](https://keras.io/guides/keras_tuner/getting_started/) from Luca Invernizzi, James Long, Francois Chollet, Tom O'Malley and Haifeng Jin.*\n",
+    "\"](https://keras.io/guides/keras_tuner/getting_started/) from Luca Invernizzi, James Long, Francois Chollet, Tom O'Malley and Haifeng Jin.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "[KerasTuner](https://keras.io/guides/keras_tuner/getting_started/) is an easy-to-use, scalable hyperparameter optimization framework that solves the pain points of hyperparameter search. \n",
     "\n",
-    "KerasTuner is a general-purpose hyperparameter tuning library. It has strong integration with Keras workflows, but it isn't limited to them: you could use it to tune scikit-learn models, or anything else. \n",
+    "- It is a general-purpose hyperparameter tuning library.\n",
+    "- It has strong integration with Keras workflows, but it isn't limited to them\n",
+    "- You can use it to tune scikit-learn models, or anything else. \n",
     "\n",
-    "Easily configure your search space with a define-by-run syntax, then leverage one of the available search algorithms to find the best hyperparameter values for your models. \n",
+    "KerasTuner comes with: \n",
     "\n",
-    "KerasTuner comes with \n",
-    "\n",
-    "- Bayesian Optimization, \n",
-    "- Hyperband, and \n",
-    "- Random Search algorithms \n",
-    "\n",
-    "built-in, and is also designed to be easy for researchers to extend in order to experiment with new search algorithms."
+    "- [Bayesian Optimization](https://keras.io/api/keras_tuner/tuners/bayesian/) (see this [blog](https://distill.pub/2020/bayesian-optimization/) for detailed explanations), \n",
+    "- [Hyperband](https://keras.io/api/keras_tuner/tuners/hyperband/) (see this [paper](https://jmlr.org/papers/v18/16-558.html))\n",
+    "- [Random Search algorithms](https://keras.io/api/keras_tuner/tuners/random/) "
    ]
   },
   {
@@ -44,12 +48,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#!pip install keras-tuner --upgrade"
+    "- Installation with pip: \n",
+    "\n",
+    "```bash\n",
+    "pip install keras-tuner --upgrade\n",
+    "```\n",
+    "\n",
+    "- Installation with conda\n",
+    "\n",
+    "```bash\n",
+    "conda install -c conda-forge keras-tuner\n",
+    "```"
    ]
   },
   {
@@ -90,23 +102,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_model(hp):\n",
+    "\n",
     "    model = keras.Sequential()\n",
+    "    \n",
     "    model.add(layers.Flatten())\n",
+    "    \n",
     "    model.add(\n",
     "        layers.Dense(\n",
     "            # Define the hyperparameter.\n",
-    "            units=hp.Int(\"units\", min_value=32, max_value=512, step=32),\n",
-    "            activation=\"relu\",\n",
+    "            units = hp.Int(\"units\", min_value=32, \n",
+    "                                    max_value=512, \n",
+    "                                    step=32),\n",
+    "            activation = \"relu\",\n",
     "        )\n",
     "    )\n",
     "    model.add(layers.Dense(10, activation=\"softmax\"))\n",
+    "    \n",
     "    model.compile(\n",
     "        optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"],\n",
+    "    \n",
     "    )\n",
     "    return model"
    ]
@@ -121,24 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-07 18:14:00.674619: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-04-08 10:21:59.502906: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7ff208ecae80>"
+       "<keras.engine.sequential.Sequential at 0x7fc3d8547520>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,11 +180,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_model(hp):\n",
+    "    \n",
     "    model = keras.Sequential()\n",
     "\n",
     "    model.add(layers.Flatten())\n",
@@ -198,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7ff2497cde20>"
+       "<keras.engine.sequential.Sequential at 0x7fc3b91c9e20>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,14 +242,13 @@
    "source": [
     "- As shown below, the hyperparameters are actual values. \n",
     "- In fact, they are just functions returning actual values. \n",
-    "- For example, hp.Int() returns an int value. \n",
-    "- Therefore, you can put them into variables, for loops, or if conditions.\n",
-    "\n"
+    "- For example, `hp.Int()` returns an int value. \n",
+    "- Therefore, you can put them into variables, for loops, or if conditions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,8 +276,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- After defining the search space, we need to select a tuner class to run the search. - You may choose from RandomSearch, BayesianOptimization and Hyperband, which correspond to different tuning algorithms. \n",
-    "- Here we use RandomSearch as an example.\n"
+    "- After defining the search space, we need to select a tuner class to run the search. \n",
+    "- You may choose from `RandomSearch`, `BayesianOptimization` and `Hyperband`, which correspond to different tuning algorithms. \n",
+    "- Here we use `RandomSearch` as an example.\n"
    ]
   },
   {
@@ -267,18 +287,18 @@
    "source": [
     "To initialize the tuner, we need to specify several arguments in the initializer:\n",
     "\n",
-    "- hypermodel. The model-building function, which is build_model in our case.\n",
-    "- objective. The name of the objective to optimize (whether to minimize or maximize is automatically inferred for built-in metrics). \n",
-    "- max_trials. The total number of trials to run during the search.\n",
-    "- executions_per_trial. The number of models that should be built and fit for each trial. Different trials have different hyperparameter values. The executions within the same trial have the same hyperparameter values. The purpose of having multiple executions per trial is to reduce results variance and therefore be able to more accurately assess the performance of a model. If you want to get results faster, you could set executions_per_trial=1 (single round of training for each model configuration).\n",
-    "- overwrite. Control whether to overwrite the previous results in the same directory or resume the previous search instead. Here we set overwrite=True to start a new search and ignore any previous results.\n",
-    "- directory. A path to a directory for storing the search results.\n",
-    "-project_name. The name of the sub-directory in the directory."
+    "- `hypermodel`. The model-building function, which is build_model in our case.\n",
+    "- `objective`. The name of the objective to optimize (whether to minimize or maximize is automatically inferred for built-in metrics). \n",
+    "- `max_trials`. The total number of trials to run during the search.\n",
+    "- `executions_per_trial`. The number of models that should be built and fit for each trial. Different trials have different hyperparameter values. The executions within the same trial have the same hyperparameter values. The purpose of having multiple executions per trial is to reduce results variance and therefore be able to more accurately assess the performance of a model. If you want to get results faster, you could set executions_per_trial=1 (single round of training for each model configuration).\n",
+    "- `overwrite`. Control whether to overwrite the previous results in the same directory or resume the previous search instead. Here we set overwrite=True to start a new search and ignore any previous results.\n",
+    "- `directory`. A path to a directory for storing the search results.\n",
+    "-`project_name`. The name of the sub-directory in the directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -337,12 +357,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Before starting the search, let's prepare the MNIST dataset."
+    "- Before starting the search, let's prepare the data.\n",
+    "- We use the MNIST dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,9 +372,93 @@
     "x_train = x[:-10000]\n",
     "x_val = x[-10000:]\n",
     "y_train = y[:-10000]\n",
-    "y_val = y[-10000:]\n",
+    "y_val = y[-10000:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "x_train = np.expand_dims(x_train, -1).astype(\"float32\") / 255.0\n",
+    "x_train = np.expand_dims(x_train, -1).astype(\"float32\") / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_val = np.expand_dims(x_val, -1).astype(\"float32\") / 255.0\n",
     "x_test = np.expand_dims(x_test, -1).astype(\"float32\") / 255.0\n",
     "\n",
