--- a/docs/keras-tuner.ipynb
+++ b/docs/keras-tuner.ipynb
@@ -118,7 +118,6 @@
     "import numpy as np\n",
     "import datetime\n",
     "\n",
-    "\n",
     "%load_ext tensorboard"
    ]
   },
@@ -204,14 +203,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-08 11:33:17.255031: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-04-08 11:37:14.079056: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7ff530d3c5b0>"
+       "<keras.engine.sequential.Sequential at 0x7f87106fffd0>"
       ]
      },
      "execution_count": 3,
@@ -293,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7ff530e32be0>"
+       "<keras.engine.sequential.Sequential at 0x7f86c12f81c0>"
       ]
      },
      "execution_count": 5,
@@ -645,11 +644,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 3 Complete [00h 00m 09s]\n",
-      "val_accuracy: 0.9665499925613403\n",
+      "Trial 3 Complete [00h 00m 07s]\n",
+      "val_accuracy: 0.9555999934673309\n",
       "\n",
-      "Best val_accuracy So Far: 0.9665499925613403\n",
-      "Total elapsed time: 00h 00m 25s\n",
+      "Best val_accuracy So Far: 0.9608500003814697\n",
+      "Total elapsed time: 00h 00m 30s\n",
       "INFO:tensorflow:Oracle triggered exit\n"
      ]
     }
@@ -657,7 +656,6 @@
    "source": [
     "# Create TensorBoard folders\n",
     "log_dir = \"tmp/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "\n",
     "\n",
     "tuner.search(\n",
     "    x_train,\n",
@@ -695,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -707,7 +705,7 @@
      "output_type": "stream",
      "text": [
       "Known TensorBoard instances:\n",
-      "  - port 6006: logdir logs/fit (started 2:24:47 ago; pid 2825)\n"
+      "  - port 6006: logdir logs/fit (started 2:31:38 ago; pid 2825)\n"
      ]
     }
    ],
@@ -729,19 +727,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selecting TensorBoard with logdir logs/fit (started 2:24:47 ago; port 6006, pid 2825).\n"
+      "Selecting TensorBoard with logdir logs/fit (started 2:28:49 ago; port 6006, pid 2825).\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-5a4b2f1b4439dca5\" width=\"100%\" height=\"1000\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-32b8afde3025476e\" width=\"100%\" height=\"1000\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-5a4b2f1b4439dca5\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-32b8afde3025476e\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
@@ -812,13 +810,15 @@
       "=================================================================\n",
       " flatten (Flatten)           (None, 784)               0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 192)               150720    \n",
+      " dense (Dense)               (None, 512)               401920    \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                1930      \n",
+      " dropout (Dropout)           (None, 512)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                5130      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 152,650\n",
-      "Trainable params: 152,650\n",
+      "Total params: 407,050\n",
+      "Trainable params: 407,050\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -859,28 +859,28 @@
       "Results summary\n",
       "Results in tmp/hello_world\n",
       "Showing 10 best trials\n",
-      "<keras_tuner.engine.objective.Objective object at 0x7ff5206558b0>\n",
+      "<keras_tuner.engine.objective.Objective object at 0x7f86c12edb80>\n",
+      "Trial summary\n",
+      "Hyperparameters:\n",
+      "units: 512\n",
+      "activation: tanh\n",
+      "dropout: True\n",
+      "lr: 0.0009615011417443857\n",
+      "Score: 0.9608500003814697\n",
+      "Trial summary\n",
+      "Hyperparameters:\n",
+      "units: 96\n",
+      "activation: tanh\n",
+      "dropout: True\n",
+      "lr: 0.0011913083962274544\n",
+      "Score: 0.9555999934673309\n",
       "Trial summary\n",
       "Hyperparameters:\n",
       "units: 192\n",
       "activation: tanh\n",
-      "dropout: False\n",
-      "lr: 0.002727646483522594\n",
-      "Score: 0.9665499925613403\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "units: 64\n",
-      "activation: tanh\n",
-      "dropout: False\n",
-      "lr: 0.006953828736395894\n",
-      "Score: 0.9565500020980835\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "units: 128\n",
-      "activation: tanh\n",
       "dropout: True\n",
-      "lr: 0.00011844905074722783\n",
-      "Score: 0.9210000038146973\n"
+      "lr: 0.000396478365712187\n",
+      "Score: 0.9442000091075897\n"
      ]
     }
    ],
