--- a/docs/keras-imdb-c.ipynb
+++ b/docs/keras-imdb-c.ipynb
@@ -853,6 +853,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate TensorBoard\n",
+    "%tensorboard --logdir /logs/fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
