--- a/docs/keras-imdb.ipynb
+++ b/docs/keras-imdb.ipynb
@@ -1016,7 +1016,17 @@
     }
    },
    "source": [
-    "- We use the tensorboard.notebook API:"
+    "- We use the tensorboard.notebook API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate TensorBoard\n",
+    "%tensorboard --logdir /logs/fit"
    ]
   },
   {
