--- a/docs/keras-tuner.ipynb
+++ b/docs/keras-tuner.ipynb
@@ -203,14 +203,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-08 11:37:14.079056: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-04-08 14:23:15.742318: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7f87106fffd0>"
+       "<keras.engine.sequential.Sequential at 0x7ff43103b790>"
       ]
      },
      "execution_count": 3,
@@ -292,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7f86c12f81c0>"
+       "<keras.engine.sequential.Sequential at 0x7ff4132a5a30>"
       ]
      },
      "execution_count": 5,
@@ -644,11 +644,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 3 Complete [00h 00m 07s]\n",
-      "val_accuracy: 0.9555999934673309\n",
+      "Trial 3 Complete [00h 00m 10s]\n",
+      "val_accuracy: 0.9690000116825104\n",
       "\n",
-      "Best val_accuracy So Far: 0.9608500003814697\n",
-      "Total elapsed time: 00h 00m 30s\n",
+      "Best val_accuracy So Far: 0.9712499976158142\n",
+      "Total elapsed time: 00h 00m 35s\n",
       "INFO:tensorflow:Oracle triggered exit\n"
      ]
     }
@@ -693,54 +693,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Known TensorBoard instances:\n",
-      "  - port 6006: logdir logs/fit (started 2:31:38 ago; pid 2825)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# View open TensorBoard instances\n",
-    "notebook.list() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selecting TensorBoard with logdir logs/fit (started 2:28:49 ago; port 6006, pid 2825).\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-32b8afde3025476e\" width=\"100%\" height=\"1000\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-4db6a4176968245e\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-32b8afde3025476e\");\n",
-       "          const url = new URL(\"http://localhost\");\n",
-       "          const port = 6006;\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-4db6a4176968245e\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6007;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
        "          }\n",
@@ -758,7 +724,78 @@
     }
    ],
    "source": [
-    "notebook.display(port=6006, height=1000)"
+    "%tensorboard --logdir /tmp/tb_logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known TensorBoard instances:\n",
+      "  - port 6006: logdir logs/fit (started 5:18:24 ago; pid 2825)\n",
+      "  - port 6007: logdir /tmp/tb_logs (started 0:00:09 ago; pid 9162)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View open TensorBoard instances\n",
+    "notebook.list() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selecting TensorBoard with logdir /tmp/tb_logs (started 0:02:32 ago; port 6007, pid 9162).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-40916bb26d4e7d9a\" width=\"100%\" height=\"1000\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-40916bb26d4e7d9a\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
+       "          const port = 6007;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "notebook.display(port=6007, height=1000)"
    ]
   },
   {
@@ -810,15 +847,13 @@
       "=================================================================\n",
       " flatten (Flatten)           (None, 784)               0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 512)               401920    \n",
+      " dense (Dense)               (None, 384)               301440    \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 512)               0         \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                5130      \n",
+      " dense_1 (Dense)             (None, 10)                3850      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 407,050\n",
-      "Trainable params: 407,050\n",
+      "Total params: 305,290\n",
+      "Trainable params: 305,290\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -859,28 +894,28 @@
       "Results summary\n",
       "Results in tmp/hello_world\n",
       "Showing 10 best trials\n",
-      "<keras_tuner.engine.objective.Objective object at 0x7f86c12edb80>\n",
+      "<keras_tuner.engine.objective.Objective object at 0x7ff450dfcf40>\n",
       "Trial summary\n",
       "Hyperparameters:\n",
-      "units: 512\n",
-      "activation: tanh\n",
-      "dropout: True\n",
-      "lr: 0.0009615011417443857\n",
-      "Score: 0.9608500003814697\n",
+      "units: 384\n",
+      "activation: relu\n",
+      "dropout: False\n",
+      "lr: 0.0005452907696240787\n",
+      "Score: 0.9712499976158142\n",
       "Trial summary\n",
       "Hyperparameters:\n",
-      "units: 96\n",
-      "activation: tanh\n",
+      "units: 320\n",
+      "activation: relu\n",
       "dropout: True\n",
-      "lr: 0.0011913083962274544\n",
-      "Score: 0.9555999934673309\n",
+      "lr: 0.0005525349394079942\n",
+      "Score: 0.9690000116825104\n",
       "Trial summary\n",
       "Hyperparameters:\n",
-      "units: 192\n",
-      "activation: tanh\n",
+      "units: 480\n",
+      "activation: relu\n",
       "dropout: True\n",
-      "lr: 0.000396478365712187\n",
-      "Score: 0.9442000091075897\n"
+      "lr: 0.00985793043338185\n",
+      "Score: 0.9544500112533569\n"
      ]
     }
    ],
@@ -896,7 +931,7 @@
     }
    },
    "source": [
-    "- You will find detailed logs, checkpoints, etc, in the folder tuner/hello_world, i.e. directory/project_name.\n",
+    "- You will find detailed logs, checkpoints, etc, in the folder tmp/hello_world, i.e. directory/project_name.\n",
     "\n",
     "- You can also visualize the tuning results using TensorBoard and HParams plugin. For more information, please following this link.\n",
     "\n"
