--- a/docs/keras-tuner.ipynb
+++ b/docs/keras-tuner.ipynb
@@ -113,7 +113,9 @@
     "\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
+    "\n",
     "from tensorboard import notebook\n",
+    "from tensorboard.plugins.hparams import api as hp\n",
     "\n",
     "import numpy as np\n",
     "import datetime\n",
@@ -800,17 +802,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "- As an alternative, you may use TensorBoard in Visual Studio Code ([Stackoverflow](https://stackoverflow.com/a/66375514)):\n",
+    "The following content is based on [\"Visualize the hyperparameter tuning process\"](https://keras.io/guides/keras_tuner/visualize_tuning/) by Jin Haifeng:\n",
     "\n",
-    "1. Open the command palette (Ctrl/Cmd + Shift + P)\n",
-    "2. Search for the command “Python: Launch TensorBoard” and press enter.\n",
-    "3. You will be able to select the folder where your TensorBoard log files are located."
+    "- You have access to all the common features of the TensorBoard. \n",
+    "- For example, you can view the loss and metrics curves and visualize the computational graph of the models in different trials.\n",
+    "- In addition to these features, we also have a `HParams` tab, in which there are three views:\n",
+    "\n",
+    "1. In the table view, you can view the different trials in a table with the different hyperparameter values and evaluation metrics. On the left side, you can specify the filters for certain hyperparameters. \n",
+    "  \n",
+    "1. It also provides parallel coordinates view and scatter plot matrix view. They are just different visualization methods for the same data:\n",
+    "  - In the parallel coordinates view, each colored line is a trial. The axes are the hyperparameters and evaluation metrics.\n",
+    "  - In the scatter plot matrix view, each dot is a trial. The plots are projections of the trials on planes with different hyperparameter and metrics as the axes."
    ]
   },
   {
@@ -825,6 +829,7 @@
    "source": [
     "# Get the top 2 models.\n",
     "models = tuner.get_best_models(num_models=2)\n",
+    "# Get best model\n",
     "best_model = models[0]"
    ]
   },
@@ -931,10 +936,9 @@
     }
    },
    "source": [
-    "- You will find detailed logs, checkpoints, etc, in the folder tmp/hello_world, i.e. directory/project_name.\n",
+    "- You will find detailed logs, checkpoints, etc, in your specified folder.\n",
     "\n",
-    "- You can also visualize the tuning results using TensorBoard and HParams plugin. For more information, please following this link.\n",
-    "\n"
+    "- You can also visualize the tuning results using TensorBoard and HParams plugin. For more information, please following this link."
    ]
   }
  ],
