--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -697,9 +697,7 @@
         "id": "YWxgxJc1b_vt"
       },
       "source": [
-        "## Model\n",
-        "\n",
-        "With this done, we can create our end-to-end model:"
+        "- With this done, we can create our end-to-end pipeline:"
       ]
     },
     {
@@ -819,10 +817,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## Model"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "2) Build the model \n",
+        "Now we can build the model: \n",
         "\n",
         "1. We use 32 number of units in the first layer\n",
         "1. We use [layers.Dropout()](https://www.tensorflow.org/api_docs/python/tf/keras/layers/Dropout) to prevent overvitting\n",
