--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -704,7 +704,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "1) Define keras.Input for every feature: "
+        "- Define keras.Input for every feature: "
       ]
     },
     {
@@ -739,7 +739,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "2) Make a list of all keras.Input feature names"
+        "- Make a list of all keras.Input feature names"
       ]
     },
     {
@@ -769,7 +769,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "3) Perform preprocessing"
+        "- Perform preprocessing"
       ]
     },
     {
@@ -843,13 +843,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 1\n",
+        "# First layer\n",
         "x = layers.Dense(32, activation=\"relu\")(all_features)\n",
-        "# 2\n",
+        "# Dropout to prevent overvitting\n",
         "x = layers.Dropout(0.5)(x)\n",
-        "# 3\n",
+        "# Output layer\n",
         "output = layers.Dense(1, activation=\"sigmoid\")(x)\n",
-        "# 4\n",
+        "\n",
+        "# Group all layers \n",
         "model = keras.Model(all_inputs, output)"
       ]
     },
