deploy: 2c795d9e68e649355b50bbb2d45e66e379ba098b

--- a/_sources/docs/structured_data_classification_from_scratch.ipynb
+++ b/_sources/docs/structured_data_classification_from_scratch.ipynb
@@ -52,7 +52,7 @@
         "Oldpeak | ST depression induced by exercise relative to rest | Numerical\n",
         "Slope | Slope of the peak exercise ST segment | Numerical\n",
         "CA | Number of major vessels (0-3) colored by fluoroscopy | Both numerical & categorical\n",
-        "Thal | 3 = normal; 6 = fixed defect; 7 = reversible defect | Categorical\n",
+        "Thal | normal; fixed defect; reversible defect | Categorical (string)\n",
         "Target | Diagnosis of heart disease (1 = true; 0 = false) | Target"
       ]
     },
@@ -95,19 +95,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {
         "id": "EId7MS20b_vm"
       },
       "outputs": [],
       "source": [
         "file_url = \"http://storage.googleapis.com/download.tensorflow.org/data/heart.csv\"\n",
-        "dataframe = pd.read_csv(file_url)"
+        "df = pd.read_csv(file_url)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 20,
       "metadata": {
         "id": "pORrkaefb_vn"
       },
@@ -118,13 +118,13 @@
               "(303, 14)"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "dataframe.shape"
+        "df.shape"
       ]
     },
     {
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 22,
       "metadata": {
         "id": "zW3GlXdWb_vo"
       },
@@ -296,13 +296,13 @@
               "4   0      normal       0  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "dataframe.head()"
+        "df.head()"
       ]
     },
     {
@@ -340,8 +340,8 @@
         }
       ],
       "source": [
-        "val_dataframe = dataframe.sample(frac=0.2, random_state=1337)\n",
-        "train_dataframe = dataframe.drop(val_dataframe.index)\n",
+        "val_dataframe = df.sample(frac=0.2, random_state=1337)\n",
+        "train_dataframe = df.drop(val_dataframe.index)\n",
         "\n",
         "print(\n",
         "    \"Using %d samples for training and %d for validation\"\n",
@@ -380,7 +380,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2022-04-02 20:44:15.670219: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "2022-04-26 15:22:19.143440: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
           ]
         }
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "NXclBW3Cb_vq"
       },
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "GOj1-dsZb_vr"
       },
@@ -495,9 +495,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Input: {'age': <tf.Tensor: shape=(), dtype=int64, numpy=62>, 'sex': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'cp': <tf.Tensor: shape=(), dtype=int64, numpy=4>, 'trestbps': <tf.Tensor: shape=(), dtype=int64, numpy=160>, 'chol': <tf.Tensor: shape=(), dtype=int64, numpy=164>, 'fbs': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'restecg': <tf.Tensor: shape=(), dtype=int64, numpy=2>, 'thalach': <tf.Tensor: shape=(), dtype=int64, numpy=145>, 'exang': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'oldpeak': <tf.Tensor: shape=(), dtype=float64, numpy=6.2>, 'slope': <tf.Tensor: shape=(), dtype=int64, numpy=3>, 'ca': <tf.Tensor: shape=(), dtype=int64, numpy=3>, 'thal': <tf.Tensor: shape=(), dtype=string, numpy=b'reversible'>}\n",
+            "Input: {'age': <tf.Tensor: shape=(), dtype=int64, numpy=57>, 'sex': <tf.Tensor: shape=(), dtype=int64, numpy=1>, 'cp': <tf.Tensor: shape=(), dtype=int64, numpy=4>, 'trestbps': <tf.Tensor: shape=(), dtype=int64, numpy=140>, 'chol': <tf.Tensor: shape=(), dtype=int64, numpy=192>, 'fbs': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'restecg': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'thalach': <tf.Tensor: shape=(), dtype=int64, numpy=148>, 'exang': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'oldpeak': <tf.Tensor: shape=(), dtype=float64, numpy=0.4>, 'slope': <tf.Tensor: shape=(), dtype=int64, numpy=2>, 'ca': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'thal': <tf.Tensor: shape=(), dtype=string, numpy=b'fixed'>}\n",
             "--------------------------------------------------\n",
-            "Target: tf.Tensor(1, shape=(), dtype=int64)\n"
+            "Target: tf.Tensor(0, shape=(), dtype=int64)\n"
           ]
         }
       ],
@@ -526,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "Ccngwlq_b_vr"
       },
@@ -538,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -547,7 +547,7 @@
               "<BatchDataset shapes: ({age: (None,), sex: (None,), cp: (None,), trestbps: (None,), chol: (None,), fbs: (None,), restecg: (None,), thalach: (None,), exang: (None,), oldpeak: (None,), slope: (None,), ca: (None,), thal: (None,)}, (None,)), types: ({age: tf.int64, sex: tf.int64, cp: tf.int64, trestbps: tf.int64, chol: tf.int64, fbs: tf.int64, restecg: tf.int64, thalach: tf.int64, exang: tf.int64, oldpeak: tf.float64, slope: tf.int64, ca: tf.int64, thal: tf.string}, tf.int64)>"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -576,6 +576,7 @@
         "- `restecg`\n",
         "- `exang`\n",
         "- `ca`\n",
+        "\n",
         "\n",
         "- First, we need to decide how to represent the categorical data\n",
         "\n",
@@ -626,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "cPnUDwDwb_vs"
       },
@@ -666,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -697,19 +698,19 @@
         "id": "YWxgxJc1b_vt"
       },
       "source": [
-        "- With this done, we can create our end-to-end pipeline:"
+        "With this done, we can create our preprocessing steps:"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "1) Define keras.Input for every feature: "
+        "- Define keras.Input for every feature: "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "id": "oJZ0EsPjb_vt"
       },
@@ -739,12 +740,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "2) Make a list of all keras.Input feature names"
+        "- Make a list of all keras.Input feature names"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -769,12 +770,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "3) Perform preprocessing"
+        "- Perform preprocessing"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -795,7 +796,22 @@
         "chol_encoded = encode_numerical_feature(chol, \"chol\", train_ds)\n",
         "thalach_encoded = encode_numerical_feature(thalach, \"thalach\", train_ds)\n",
         "oldpeak_encoded = encode_numerical_feature(oldpeak, \"oldpeak\", train_ds)\n",
-        "slope_encoded = encode_numerical_feature(slope, \"slope\", train_ds)\n",
+        "slope_encoded = encode_numerical_feature(slope, \"slope\", train_ds)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Make a list of all encoded features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "all_features = layers.concatenate(\n",
         "    [\n",
@@ -804,7 +820,6 @@
         "        fbs_encoded,\n",
         "        restecg_encoded,\n",
         "        exang_encoded,\n",
-        "        slope_encoded,\n",
         "        ca_encoded,\n",
         "        thal_encoded,\n",
         "        age_encoded,\n",
@@ -812,6 +827,7 @@
         "        chol_encoded,\n",
         "        thalach_encoded,\n",
         "        oldpeak_encoded,\n",
+        "        slope_encoded,\n",
         "    ]\n",
         ")"
       ]
@@ -843,13 +859,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 1\n",
+        "# First layer\n",
         "x = layers.Dense(32, activation=\"relu\")(all_features)\n",
-        "# 2\n",
+        "# Dropout to prevent overvitting\n",
         "x = layers.Dropout(0.5)(x)\n",
-        "# 3\n",
+        "# Output layer\n",
         "output = layers.Dense(1, activation=\"sigmoid\")(x)\n",
-        "# 4\n",
+        "\n",
+        "# Group all layers \n",
         "model = keras.Model(all_inputs, output)"
       ]
     },
